# celestial-dissension

./: .gitignore  Abstracts.hpp  Background.cpp  Background.hpp  CD.cpp  CD.hpp  CMakeLists.txt  Context.cpp  Context.hpp  ContextSDL.cpp  Intro.cpp  Intro.hpp  Logger.cpp  Logger.hpp  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  Renderer.cpp  Renderer.hpp  abstracts.hpp  main  main.cpp  makefile
vcproj/: Celestial Dissension.sln  Celestial Dissension.vcxproj  Celestial Dissension.vcxproj.filters  ~AutoRecover.Celestial Dissension.vcxproj
